INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(QuequeTest QuequeTest.cpp)
ADD_EXECUTABLE(ThreadPoolTest ThreadPoolTest.cpp)
ADD_EXECUTABLE(FutureTest FutureTest.cpp)
ADD_EXECUTABLE(DeferTest DeferTest.cpp)
ADD_EXECUTABLE(TimerTest TimerTest.cpp)
ADD_EXECUTABLE(FuturePromiseTest FuturePromiseTest.cpp)
ADD_EXECUTABLE(FutureWhenAllTest FutureWhenAllTest.cpp)
ADD_EXECUTABLE(FutureWhenAnyTest FutureWhenAnyTest.cpp)


SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin/examples)

TARGET_LINK_LIBRARIES(QuequeTest util)
TARGET_LINK_LIBRARIES(ThreadPoolTest util)
TARGET_LINK_LIBRARIES(FutureTest util)
TARGET_LINK_LIBRARIES(DeferTest util)
TARGET_LINK_LIBRARIES(TimerTest util)
TARGET_LINK_LIBRARIES(FuturePromiseTest util)
TARGET_LINK_LIBRARIES(FutureWhenAllTest util)
TARGET_LINK_LIBRARIES(FutureWhenAnyTest util)

ADD_DEPENDENCIES(QuequeTest util)
ADD_DEPENDENCIES(ThreadPoolTest util)
ADD_DEPENDENCIES(FutureTest util)
ADD_DEPENDENCIES(DeferTest util)
ADD_DEPENDENCIES(TimerTest util)
ADD_DEPENDENCIES(FuturePromiseTest util)
ADD_DEPENDENCIES(FutureWhenAllTest util)
ADD_DEPENDENCIES(FutureWhenAnyTest util)