INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(./ThreadPool UTIL_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_LIBRARY(util ${UTIL_SRC})
TARGET_LINK_LIBRARIES(util; pthread)
SET_TARGET_PROPERTIES(util PROPERTIES LINKER_LANGUAGE CXX)

INSTALL(TARGETS util DESTINATION lib)
set(HEADERS
    threadpool/ThreadPool.h
    queue/RingQueue.hpp
    queue/LockQueue.hpp
    queue/CASQueue.hpp
)

INSTALL(FILES ${HEADERS} DESTINATION include/util)

